--- a/Con_Mongo_&_Docker-Compose/trianaweather/docker-compose.yml
+++ b/Con_Mongo_&_Docker-Compose/trianaweather/docker-compose.yml
@@ -2,6 +2,7 @@ version: '2'
 services:
     web:
         build: .
+        command: npm run start-dev
         depends_on:
             - db
         ports:
