pequeño cambio al Dockerfile pasamos de cmd a entrypoint

--- a/Con_Mongo_&_Docker-Compose/trianaweather/Dockerfile
+++ b/Con_Mongo_&_Docker-Compose/trianaweather/Dockerfile
@@ -33,4 +33,5 @@ EXPOSE 3000
 
 # Inicia la aplicación al iniciar al contenedor
 # CMD nodemon -L --watch . app.js
-CMD [ "node", "./bin/www" ]
+# CMD [ "node", "./bin/www" ]
+ENTRYPOINT [ "nodemon", "./bin/www" ]
